# plants-helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
bot/: __init__.py  config.py  main.py
bot/database/: models.py  repository.py
bot/handlers/: __init__.py  admin.py  callbacks.py  commands.py  menu.py  plants.py  reply_buttons.py  settings.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/services/: plant_service.py  scheduler.py  sheets.py
data/: plants.json
