[tool.poetry]
name = "plants-helper"
version = "0.1.0"
description = "Telegram бот-помощник для ухода за комнатными растениями"
authors = ["Serafima"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4"
aiosqlite = "^0.19.0"
apscheduler = "^3.10.4"
gspread = "^6.0.0"
google-auth = "^2.27.0"
pydantic = "^2.6"
pydantic-settings = "^2.1"
python-dotenv = "^1.0.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
